# RL-and-Robot

./: LICENSE  README.md
deepq/: README.md  rl_model.md
deepq/asyn_sec/: MountainCar_model.pkl  actor_interact_env.py  asyn_classical_env_test.py  cartpole_model.pkl  enjoy_mountaincar.py  four_robots_asyn_test.py  new_models.py  result_asyn.py  simple_multi_agent.py
deepq/asyn_trainer_actor/: __init__.py  actor_build.py  actor_interaction.py  gpw_env_trainer.py  mem_buffer_thread.py  new_models.py  trainer_build.py  trainer_simple.py
deepq/experiments/: asyn_train_pionner03.py  cartpole_model.pkl  eight_asyn_train.py  enjoy_cartpole.py  enjoy_mountaincar.py  find_env.py  four_single_rob_train.py  mountaincar_model.pkl  n_robot_model.pkl  run_atari.py  single_robot_model.pkl  single_robot_train.py  tensorflow_test.py  train_cartpole.py  train_mountaincar.py  train_pionner01.py  train_pionner02.py  yx_test_algorithm.py
deepq/original/: README.md  build_graph.py  models.py  replay_buffer.py  simple.py
p2os-master/: README.md
p2os-master/p2os_doc/: CHANGELOG.rst  CMakeLists.txt  package.xml
p2os-master/p2os_doc/p2os_driver/: manifest.yaml
p2os-master/p2os_doc/p2os_driver/html/: annotated.html  classKineCalc-members.html  classKineCalc.html  classP2OSNode-members.html  classP2OSNode.html  classP2OSPacket-members.html  classP2OSPacket.html  classP2OSPtz-members.html  classP2OSPtz.html  classSIP-members.html  classSIP.html  classcircbuf-members.html  classcircbuf.html  classes.html  dir_000001_000002.html  dir_6729f2465a455b5914d0b2d2cb54d37e.html  dir_6729f2465a455b5914d0b2d2cb54d37e_dep.map  dir_6729f2465a455b5914d0b2d2cb54d37e_dep.md5  dir_81aa4d5c70dd79465178a51c7415355e.html  dir_81aa4d5c70dd79465178a51c7415355e_dep.map  dir_81aa4d5c70dd79465178a51c7415355e_dep.md5  dir_c3fff03ad2708655b8a204d130fbe51b.html  dir_c3fff03ad2708655b8a204d130fbe51b_dep.map  dir_c3fff03ad2708655b8a204d130fbe51b_dep.md5  dir_d4024eda4ffc5b6ebed2a27c873406a8.html  dir_d4024eda4ffc5b6ebed2a27c873406a8_dep.map  dir_d4024eda4ffc5b6ebed2a27c873406a8_dep.md5  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  (+127 more)
p2os-master/p2os_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
p2os-master/p2os_driver/include/p2os_driver/: kinecalc.h  p2os.h  p2os_ptz.h  packet.h  robot_params.h  sip.h
p2os-master/p2os_driver/src/: kinecalc.cc  p2os.cc  p2os_ptz.cpp  p2osnode.cc  packet.cc  robot_params.cc  sip.cc
p2os-master/p2os_launch/: CHANGELOG.rst  CMakeLists.txt  diagnostics.xml  mainpage.dox  package.xml  pioneer.launch
p2os-master/p2os_launch/config/: gmapping_demo.vcg  laser_demo.vcg
p2os-master/p2os_launch/diagnostics/: p2os_analyzers.yaml
p2os-master/p2os_launch/launch/: amcl.launch  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_p3dx.yaml  enable_motors.launch  global_costmap_params.yaml  gmapping.launch  gmapping_tf_lrf_p2os_teleop_joy.launch  local_costmap_params.yaml  navigation-pioneer-3at.launch  navigation-pioneer-3dx.launch  navigation.launch  navigation_tf_lrf_p2os_teleop_joy.launch  p2os_diagnostics.launch  p2os_driver.launch  p2os_teleop_joy.launch  pioneerMasterLaunchFile.launch  sicklms.launch  stage-pioneer-3dx-hokuyo.launch  stage-pioneer-3dx-sick.launch  teleop_joy.launch  teleop_keyboard.launch  tf_base_link_to_laser.launch  tf_lrf_p2os.launch  tf_lrf_p2os_teleop_joy.launch
p2os-master/p2os_launch/launch/stage-worlds/: pioneer3at-sick.world  pioneer3dx-hokuyo.world  pioneer3dx-sick.world
p2os-master/p2os_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
p2os-master/p2os_msgs/msg/: AIO.msg  ArmState.msg  BatteryState.msg  DIO.msg  GripState.msg  GripperState.msg  LiftState.msg  MotorState.msg  PTZState.msg  SonarArray.msg  TCMState.msg
p2os-master/p2os_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
p2os-master/p2os_teleop/src/: p2os_teleop.cc
p2os-master/p2os_urdf/: CHANGELOG.rst  CMakeLists.txt
p2os-master/p2os_urdf/defs/: ns_pioneer3dx_body.xacro  pioneer3at.xacro  pioneer3at_body.xacro  pioneer3dx_body.xacro
p2os-master/p2os_urdf/launch/: 4_small_8_robots_gazebo.launch  pioneer3at.gazebo.launch  pioneer3dx.gazebo.launch  pioneer3dx_1.launch  pioneer3dx_random.gazebo.launch  pioneer3dx_urdf.launch  yx_pioneer.launch  yx_pioneer_robots.launch
p2os-master/p2os_urdf/src/: publisher3dx.cc
p2os_test/: CMakeLists.txt  package.xml
p2os_test/src/: __init__.py  acquire_grid_map.py  asyn_gpw_num.py  eight_asyn_gpw.py  fifth_edition_gpw.py  fourth_edition2_gpw.py  fourth_edition_gpw.py  gazebo_pionner_wrapper.py  read_state_node.py  rest_pose.py  sequence_single_robor_gpw.py  seventh_edition_gpw.py  single_robot_gpw.py  sixth_edition_gpw.py
p2os_test/src/test/: receive_laser_date.py  tensorflow_device_test.py  test0623.py  test0624.py  test_file.py  test_gym_gazebo.py  test_orientation.py  testing.py
p2os_urdf/: README.md  package.xml
p2os_urdf/defs/: pioneer3dx.xacro  pioneer3dx_wheel.xacro
p2os_urdf/launch/: 4_different_parallel_small.world  6_pioneers_small.launch  8_pioneers_small.launch  pioneer3at_urdf.launch  random_shape_world.world  test1.launch  upload_pioneer3at.xml  upload_pioneer3dx.xml  yx_pioneers_gazebo.launch
ppo2/: policies.py  ppo2.py  run_atari.py  test_simple_env.py
